fixed layout issues

--- a/src/app/components/moonbase/landing/landing-intro/landing-intro.component.scss
+++ b/src/app/components/moonbase/landing/landing-intro/landing-intro.component.scss
@@ -130,7 +130,7 @@ section.landing-intro {
     }
     .info-title {
         font-size: 24px;
-        margin-bottom: 30px;
+        //margin-bottom: 30px;
     }
     .info-text {
         font-size: 16px;
